[Safe CPP] Address Warnings in RenderLayerInlines.h https://bugs.webkit.org/show_bug.cgi?id=294118 rdar://problem/152715862

Reviewed by Chris Dumez.

Address safe cpp warnings in RenderLayerInlines.h.

 * Source/WebCore/SaferCPPExpectations/UncheckedCallArgsCheckerExpectations:
 * Source/WebCore/SaferCPPExpectations/UncheckedLocalVarsCheckerExpectations:
 * Source/WebCore/rendering/RenderLayer.cpp:
 (WebCore::RenderLayer::paintLayerContents):
 * Source/WebCore/rendering/RenderLayer.h:
 * Source/WebCore/rendering/RenderLayerInlines.h:
 (WebCore::RenderLayer::hasNonOpacityTransparency const):

Canonical link: https://commits.webkit.org/295950@main